--- a/assets/agent/collection-report.html
+++ b/assets/agent/collection-report.html
@@ -198,9 +198,9 @@
   <script src="../js/demo-2.js"></script>
   <!-- <script src="js/styleSwitcher.js"></script> -->
 
-  <script src="../js/nav.js"></script>
+  <script src="../js/agent-nav.js"></script>
   <script>
-    displayHeaderTitile('Dashboard') 
+    displayHeaderTitile('Collection Report') 
   </script>
 
 </body>
