--- a/assets/agent/create-new-tax-payer.html
+++ b/assets/agent/create-new-tax-payer.html
@@ -111,7 +111,7 @@
 
   <script src="../js/agent-nav.js"></script>
   <script>
-    displayHeaderTitile('Dashboard') 
+    displayHeaderTitile('Create New Tax Payer') 
   </script>
 
 </body>
