--- a/auth/login.html
+++ b/auth/login.html
@@ -15,7 +15,7 @@
 	<meta property="og:image" content="https://Salreo.dexignZone.com/xhtml/social-image.png" >
 	<meta name="format-detection" content="telephone=no">
 	<!-- PAGE TITLE HERE -->
-	<title>Salreo Crypto Trading UI Admin</title>
+	<title>Login</title>
 	<!-- FAVICONS ICON -->
 	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png" >
 	<link href="assets/vendor/wow-master/css/libs/animate.css" rel="stylesheet">
