--- a/agent/index.html
+++ b/agent/index.html
@@ -70,12 +70,11 @@
 											  <span><a href="page-forgot-password.html" class="text-primary font-w500 c-pointer">Forget Password ?</a></span>
 										 </div>
 										</form>
-										  <a href="index.html" class="btn btn-primary btn-block mb-4"><i class="fa-solid fa-lock text-white me-2"></i>Login</a>
+										  <a href="dashboard.html" class="btn btn-primary btn-block mb-4"><i class="fa-solid fa-lock text-white me-2"></i>Login</a>
 										  
-										
-										<div class="text-center">
+										<!-- <div class="text-center">
 											<span class="">Do not have account Yet?<a href="signup.html" class="text-primary font-w500"><span> </span>Sign up!</a></span>	
-										</div>
+										</div> -->
 									</div>
 								</div>
 							</div>
