--- a/admin/agent-management.html
+++ b/admin/agent-management.html
@@ -8,19 +8,19 @@
   <meta name="description" content="Payment System">
   <meta name="format-detection" content="telephone=no">
   <!-- PAGE TITLE HERE -->
-  <title>User Management</title>
+  <title>Agent Management</title>
   <!-- FAVICONS ICON -->
-  <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
-  <link href="../vendor/wow-master/css/libs/animate.css" rel="stylesheet">
-  <link href="../vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../vendor/bootstrap-select-country/css/bootstrap-select-country.min.css">
-  <link rel="stylesheet" href="../vendor/jquery-nice-select/css/nice-select.css">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/favicon.png">
+  <link href="../assets/vendor/wow-master/css/libs/animate.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/vendor/bootstrap-select-country/css/bootstrap-select-country.min.css">
+  <link rel="stylesheet" href="../assets/vendor/jquery-nice-select/css/nice-select.css">
   <!--swiper-slider-->
-  <link rel="stylesheet" href="../vendor/swiper/css/swiper-bundle.min.css">
-  <link href="../vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/vendor/swiper/css/swiper-bundle.min.css">
+  <link href="../assets/vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
   <!-- Style css -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-  <link href="../css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -57,7 +57,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="invoice-btn mb-3">
-                                <a href="create-new-user.html" class="btn btn-primary">Create New User
+                                <a href="create-new-agent.html" class="btn btn-primary">Create New Agent
                                     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M12 3C7.05 3 3 7.05 3 12C3 16.95 7.05 21 12 21C16.95 21 21 16.95 21 12C21 7.05 16.95 3 12 3ZM12 19.125C8.1 19.125 4.875 15.9 4.875 12C4.875 8.1 8.1 4.875 12 4.875C15.9 4.875 19.125 8.1 19.125 12C19.125 15.9 15.9 19.125 12 19.125Z" fill="#FCFCFC"/>
                                         <path d="M16.3498 11.0251H12.9748V7.65009C12.9748 7.12509 12.5248 6.67509 11.9998 6.67509C11.4748 6.67509 11.0248 7.12509 11.0248 7.65009V11.0251H7.6498C7.1248 11.0251 6.6748 11.4751 6.6748 12.0001C6.6748 12.5251 7.1248 12.9751 7.6498 12.9751H11.0248V16.3501C11.0248 16.8751 11.4748 17.3251 11.9998 17.3251C12.5248 17.3251 12.9748 16.8751 12.9748 16.3501V12.9751H16.3498C16.8748 12.9751 17.3248 12.5251 17.3248 12.0001C17.3248 11.4751 16.8748 11.0251 16.3498 11.0251Z" fill="#FCFCFC"/>
@@ -72,25 +72,32 @@
                                             <thead>
                                                 <tr>
                                                     <th>
-                                                        <input type="checkbox" class="form-check-input" id="checkAll" required="">
+                                                        <!-- <input type="checkbox" class="form-check-input" id="checkAll" required=""> -->
+                                                         S/N
                                                     </th>
                                                     <th>Name</th>
-                                                    <th>Role</th>
+                                                    <th>Phone</th>
+                                                    <th>N0. of Managed Users</th>
                                                     <th>Last Login</th>
+                                                    <!-- <th>Value of Invoices Generated</th> -->
                                                     <th>Date Created</th>
+                                                    <!-- <th>Total Invoiced Paid</th>
+                                                    <th>Value of Invoices Paid</th> -->
+                                                    <th>Status</th>
                                                     <th>Manage</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td>
+                                                    <!-- <td>
                                                         <div class="checkbox me-0 align-self-center">
                                                             <div class="custom-control custom-checkbox ">
                                                                 <input type="checkbox" class="form-check-input" id="check8" required="">
                                                                 <label class="custom-control-label" for="check8"></label>
                                                             </div>
                                                         </div>
-                                                    </td>
+                                                    </td> -->
+                                                    <td>1</td>
                                                     <td class="whitesp-no p-0">
                                                         <div class="py-sm-3 py-1">
                                                             <div >
@@ -99,62 +106,17 @@
                                                             </div>												
                                                         </div>
                                                     </td>
-                                                    <td class= "doller">Admin</td>
-                                                    <td class="whitesp-no fs-14 font-w400">June 1, 2020, 08:22 AM</td>
+                                                    <td>08023324567</td>
+                                                    <td>230</td>
+                                                    <td>June 1, 2020, 08:22 AM</td>
                                                     <td>June 31, 2025</td>
+                                                   <td style="color: green;">Active</td>
                                                     <td>
-                                                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal">Edit</button>
+                                                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editAgentModal">Edit</button>
+                                                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deactivateAgentModal">Deactivate</button>
                                                     </td>
                                                 </tr>
-                                                <tr>
-                                                    <td>
-                                                        <div class="checkbox me-0 align-self-center">
-                                                            <div class="custom-control custom-checkbox ">
-                                                                <input type="checkbox" class="form-check-input" id="check8" required="">
-                                                                <label class="custom-control-label" for="check8"></label>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td class="whitesp-no p-0">
-                                                        <div class="py-sm-3 py-1">
-                                                            <div >
-                                                                <h6 class="font-w500 fs-15 mb-0">Marilyn Workman</h6>
-                                                                <span class="fs-14 font-w400"><a href="app-profile.html">@thomaskhuncoro</a></span>
-                                                            </div>												
-                                                        </div>
-                                                    </td>
-                                                    <td class= "doller">Admin</td>
-                                                    <td class="whitesp-no fs-14 font-w400">June 1, 2020, 08:22 AM</td>
-                                                    <td>June 31, 2025</td>
-                                                    <td>
-                                                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal">Edit</button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <div class="checkbox me-0 align-self-center">
-                                                            <div class="custom-control custom-checkbox ">
-                                                                <input type="checkbox" class="form-check-input" id="check8" required="">
-                                                                <label class="custom-control-label" for="check8"></label>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td class="whitesp-no p-0">
-                                                        <div class="py-sm-3 py-1">
-                                                            <div >
-                                                                <h6 class="font-w500 fs-15 mb-0">Marilyn Workman</h6>
-                                                                <span class="fs-14 font-w400"><a href="app-profile.html">@thomaskhuncoro</a></span>
-                                                            </div>												
-                                                        </div>
-                                                    </td>
-                                                    <td class= "doller">Admin</td>
-                                                    <td class="whitesp-no fs-14 font-w400">June 1, 2020, 08:22 AM</td>
-                                                    <td>June 31, 2025</td>
-                                                    <td>
-                                                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal">Edit</button>
-                                                    </td>
-                                                </tr>
-
+                                                
 
                                             </tbody>
                                         </table>
@@ -180,11 +142,11 @@
 
   
   <!-- Modal -->
-  <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="editAgentModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Edit User</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Agent</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -211,37 +173,73 @@
     </div>
   </div>
 
+  
+  <!-- Modal -->
+  <div class="modal fade" id="deactivateAgentModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Deactivate Agent Account</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p >Are you sure you want to deactivate this account?</p>
+        </div>
+        <!-- <div class="modal-body">
+            <div class="mb-3 d-block">
+                <label  class="form-label d-block mb-2">Invoice Number</label>
+                <input type="text" class="form-control w-100 mb-0">
+            </div>
+            <div class="mb-3 d-block">
+                <label  class="form-label d-block mb-2">Amount</label>
+                <input type="text" class="form-control w-100 mb-0">
+            </div>
+            <label  class="form-label d-block mb-2"> Payment Status</label>
+              <select class="w-100" aria-label="Default select example">
+                <option selected>Paid</option>
+                <option value="1">Unpaid</option>
+                <option value="1">Pending</option>
+              </select>
+        </div> -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!--**********************************
         Scripts
     ***********************************-->
   <!-- Required vendors -->
-  <script src="../vendor/global/global.min.js"></script>
-  <script src="../vendor/chart.js/Chart.bundle.min.js"></script>
-  <script src="../vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+  <script src="../assets/vendor/global/global.min.js"></script>
+  <script src="../assets/vendor/chart.js/Chart.bundle.min.js"></script>
+  <script src="../assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
   <!-- Apex Chart -->
-  <script src="../vendor/apexchart/apexchart.js"></script>
+  <script src="../assets/vendor/apexchart/apexchart.js"></script>
   <!-- Chart piety plugin files -->
-  <script src="../vendor/peity/jquery.peity.min.js"></script>
-  <script src="../vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+  <script src="../assets/vendor/peity/jquery.peity.min.js"></script>
+  <script src="../assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
   <!--swiper-slider-->
-  <script src="../vendor/swiper/js/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/swiper/js/swiper-bundle.min.js"></script>
 
   <!-- Date-picker -->
-  <script src="../vendor/bootstrap-datetimepicker/js/moment.js"></script>
-  <script src="../vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/moment.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
   <!-- Dashboard 1 -->
-  <script src="../js/dashboard/dashboard-1.js"></script>
-  <script src="../vendor/wow-master/dist/wow.min.js"></script>
-  <script src="../vendor/bootstrap-datetimepicker/js/moment.js"></script>
-  <script src="../vendor/bootstrap-select-country/js/bootstrap-select-country.min.js"></script>
+  <script src="../assets/js/dashboard/dashboard-1.js"></script>
+  <script src="../assets/vendor/wow-master/dist/wow.min.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/moment.js"></script>
+  <script src="../assets/vendor/bootstrap-select-country/js/bootstrap-select-country.min.js"></script>
 
-  <script src="../js/deznav-2-init.js"></script>
-  <script src="../js/custom.min.js"></script>
-  <script src="../js/demo-2.js"></script>
+  <script src="../assets/js/deznav-2-init.js"></script>
+  <script src="../assets/js/custom.min.js"></script>
+  <script src="../assets/js/demo-2.js"></script>
   <!-- <script src="js/styleSwitcher.js"></script> -->
 
-  <script src="../js/nav.js"></script>
+  <script src="../assets/js/nav.js"></script>
   <script>
     displayHeaderTitile('Dashboard') 
   </script>
