--- a/admin/blacklist-business.html
+++ b/admin/blacklist-business.html
@@ -8,19 +8,23 @@
   <meta name="description" content="Payment System">
   <meta name="format-detection" content="telephone=no">
   <!-- PAGE TITLE HERE -->
-  <title>Demand Notice</title>
+  <title>Blacklisted Business</title>
   <!-- FAVICONS ICON -->
-  <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
-  <link href="../vendor/wow-master/css/libs/animate.css" rel="stylesheet">
-  <link href="../vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../vendor/bootstrap-select-country/css/bootstrap-select-country.min.css">
-  <link rel="stylesheet" href="../vendor/jquery-nice-select/css/nice-select.css">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/favicon.png">
+  <link href="../assets/vendor/wow-master/css/libs/animate.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/vendor/bootstrap-select-country/css/bootstrap-select-country.min.css">
+  <link rel="stylesheet" href="../assets/vendor/jquery-nice-select/css/nice-select.css">
+  <!-- Datatable -->
+  <link href="../assets/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
   <!--swiper-slider-->
-  <link rel="stylesheet" href="../vendor/swiper/css/swiper-bundle.min.css">
-  <link href="../vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/vendor/swiper/css/swiper-bundle.min.css">
+  <link href="../assets/vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
   <!-- Style css -->
+	<link href="../assets/vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-  <link href="../css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -45,30 +49,83 @@
     </div>
 
     <div class="content-body">
+      <div class="container-fluid">
+          <!-- row -->
+          <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">Basic Datatable</h4>
+                </div>
+                <div class="card-body pb-0">
+                    <div class="table-responsive">
+                        <table id="example" class="display" style="min-width: 845px">
+                            <thead>
+                                <tr>
+                                  <th>S/N</th>
+                                    <th>Business Name</th>
+                                    <th>Address</th>
+                                    <th>TIN</th>
+                                    <th>Reported By (Agent)</th>
+                                    <th>Reported On</th>
+                                    <th>Reason for Blacklisted</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                  <td>1</td>
+                                    <td>Jonas Ventures</td>
+                                    <td>No.40 kumasi Crescent Wuse II, FCT</td>
+                                    <td>1234567890</td>
+                                    <td>Musa Isa</td>
+                                    <td>2010/07/14</td>
+                                    <td>Fake TIN</td>
+                                    <td style="color: red;">Removed</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                      <td>Jonas Ventures</td>
+                                      <td>No.40 kumasi Crescent Wuse II, FCT</td>
+                                      <td>1234567890</td>
+                                      <td>Musa Isa</td>
+                                      <td>2010/07/14</td>
+                                      <td>Fake TIN</td>
+                                      <td style="color: green;">Verified</td>
+                                  </tr>
+                                  <tr>
+                                    <td>3</td>
+                                      <td>Jonas Ventures</td>
+                                      <td>No.40 kumasi Crescent Wuse II, FCT</td>
+                                      <td>1234567890</td>
+                                      <td>Musa Isa</td>
+                                      <td>2010/07/14</td>
+                                      <td>Fake TIN</td>
+                                      <td style="color: blue;">Pending</td>
+                                  </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-      <!-- row -->
+
+      </div>
+    </div>
+
+    <!-- <div class="content-body">
         <div class="container-fluid pt-0">
-            <div class="row">
-                <div class="col-xl-12">
-
-                <!-- MAIN BODY -->
                 <div class="container-fluid">
-                    <!-- Row -->
                     <div class="row">
                         <div class="col-xl-12">
-                            <!-- <div class="row">
-                                <button>filter</button>
-                                <button>download</button>
-                            </div> -->
                             <div class="row">
-                                <!--column-->
                                 <div class="col-xl-12 wow fadeInUp" data-wow-delay="1.5s">
                                     <div class="table-responsive  full-data">
                                         <table class="table-responsive-lg table display mb-4 dataTablesCard  text-black dataTable no-footer" id="example6" style="text-align: center;">
                                             <thead>
                                                 <tr>
                                                     <th>
-                                                        <input type="checkbox" class="form-check-input" id="checkAll" required="">
+                                                         S/N
                                                     </th>
                                                     <th>Revenue Head</th>
                                                     <th>Name</th>
@@ -86,14 +143,7 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td>
-                                                        <div class="checkbox me-0 align-self-center">
-                                                            <div class="custom-control custom-checkbox ">
-                                                                <input type="checkbox" class="form-check-input" id="check8" required="">
-                                                                <label class="custom-control-label" for="check8"></label>
-                                                            </div>
-                                                        </div>
-                                                    </td>
+                                                    <td>1</td>
                                                     <td>Application Fee</td>
                                                     <td>Yusuf Lawan</td>
                                                     <td>TIN-0001234</td>
@@ -117,7 +167,6 @@
                                         </table>
                                     </div>
                                 </div>
-                                <!--/column-->
                             </div>
                         </div>
                     </div>
@@ -125,8 +174,11 @@
             
                 </div>
 
-            </div>
-        </div>
+    </div> -->
+
+
+
+            
     </div>
 
     <div class="footer" id="footer">
@@ -172,33 +224,41 @@
         Scripts
     ***********************************-->
   <!-- Required vendors -->
-  <script src="../vendor/global/global.min.js"></script>
-  <script src="../vendor/chart.js/Chart.bundle.min.js"></script>
-  <script src="../vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+  <script src="../assets/vendor/global/global.min.js"></script>
+  <script src="../assets/vendor/chart.js/Chart.bundle.min.js"></script>
+  <script src="../assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
   <!-- Apex Chart -->
-  <script src="../vendor/apexchart/apexchart.js"></script>
+  <script src="../assets/vendor/apexchart/apexchart.js"></script>
   <!-- Chart piety plugin files -->
-  <script src="../vendor/peity/jquery.peity.min.js"></script>
-  <script src="../vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+  <script src="../assets/vendor/peity/jquery.peity.min.js"></script>
+  <script src="../assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
   <!--swiper-slider-->
-  <script src="../vendor/swiper/js/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/swiper/js/swiper-bundle.min.js"></script>
 
   <!-- Date-picker -->
-  <script src="../vendor/bootstrap-datetimepicker/js/moment.js"></script>
-  <script src="../vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/moment.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
   <!-- Dashboard 1 -->
-  <script src="../js/dashboard/dashboard-1.js"></script>
-  <script src="../vendor/wow-master/dist/wow.min.js"></script>
-  <script src="../vendor/bootstrap-datetimepicker/js/moment.js"></script>
-  <script src="../vendor/bootstrap-select-country/js/bootstrap-select-country.min.js"></script>
+  <script src="../assets/js/dashboard/dashboard-1.js"></script>
+  <script src="../assets/vendor/wow-master/dist/wow.min.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/moment.js"></script>
+  <script src="../assets/vendor/bootstrap-select-country/js/bootstrap-select-country.min.js"></script>
 
-  <script src="../js/deznav-2-init.js"></script>
-  <script src="../js/custom.min.js"></script>
-  <script src="../js/demo-2.js"></script>
+  <script src="../assets/js/deznav-2-init.js"></script>
+  <script src="../assets/js/custom.min.js"></script>
+  <script src="../assets/js/demo-2.js"></script>
+  <!-- <script src="../assets/js/styleSwitcher.js"></script> -->
+
+  <!-- Datatable -->
+  <script src="../assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
+  <script src="../assets/js/plugins-init/datatables.init.js"></script>
+
+  <script src="../assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+
   <!-- <script src="js/styleSwitcher.js"></script> -->
 
-  <script src="../js/nav.js"></script>
+  <script src="../assets/js/nav.js"></script>
   <script>
     displayHeaderTitile('Dashboard') 
   </script>
