--- a/agent/business-owners.html
+++ b/agent/business-owners.html
@@ -8,19 +8,19 @@
   <meta name="description" content="Payment System">
   <meta name="format-detection" content="telephone=no">
   <!-- PAGE TITLE HERE -->
-  <title>Tax Payer</title>
+  <title>Business Owners</title>
   <!-- FAVICONS ICON -->
-  <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
-  <link href="../vendor/wow-master/css/libs/animate.css" rel="stylesheet">
-  <link href="../vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../vendor/bootstrap-select-country/css/bootstrap-select-country.min.css">
-  <link rel="stylesheet" href="../vendor/jquery-nice-select/css/nice-select.css">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/favicon.png">
+  <link href="../assets/vendor/wow-master/css/libs/animate.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/vendor/bootstrap-select-country/css/bootstrap-select-country.min.css">
+  <link rel="stylesheet" href="../assets/vendor/jquery-nice-select/css/nice-select.css">
   <!--swiper-slider-->
-  <link rel="stylesheet" href="../vendor/swiper/css/swiper-bundle.min.css">
-  <link href="../vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/vendor/swiper/css/swiper-bundle.min.css">
+  <link href="../assets/vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
   <!-- Style css -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-  <link href="../css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -59,7 +59,7 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="invoice-btn mb-3">
-                                        <a href="create-new-tax-payer.html" class="btn btn-primary">Create New Tax Payer
+                                        <a href="create-new-buiness-owner.html" class="btn btn-primary">Create New Business Owner
                                             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M12 3C7.05 3 3 7.05 3 12C3 16.95 7.05 21 12 21C16.95 21 21 16.95 21 12C21 7.05 16.95 3 12 3ZM12 19.125C8.1 19.125 4.875 15.9 4.875 12C4.875 8.1 8.1 4.875 12 4.875C15.9 4.875 19.125 8.1 19.125 12C19.125 15.9 15.9 19.125 12 19.125Z" fill="#FCFCFC"/>
                                                 <path d="M16.3498 11.0251H12.9748V7.65009C12.9748 7.12509 12.5248 6.67509 11.9998 6.67509C11.4748 6.67509 11.0248 7.12509 11.0248 7.65009V11.0251H7.6498C7.1248 11.0251 6.6748 11.4751 6.6748 12.0001C6.6748 12.5251 7.1248 12.9751 7.6498 12.9751H11.0248V16.3501C11.0248 16.8751 11.4748 17.3251 11.9998 17.3251C12.5248 17.3251 12.9748 16.8751 12.9748 16.3501V12.9751H16.3498C16.8748 12.9751 17.3248 12.5251 17.3248 12.0001C17.3248 11.4751 16.8748 11.0251 16.3498 11.0251Z" fill="#FCFCFC"/>
@@ -75,7 +75,8 @@
                                                     <thead>
                                                         <tr>
                                                             <th>
-                                                                <input type="checkbox" class="form-check-input" id="checkAll" required="">
+                                                                <!-- <input type="checkbox" class="form-check-input" id="checkAll" required=""> -->
+                                                                 S/N
                                                             </th>
                                                             <th>Payer ID</th>
                                                             <th>Full Name</th>
@@ -87,14 +88,15 @@
                                                     </thead>
                                                     <tbody>
                                                         <tr>
-                                                            <td>
+                                                            <!-- <td>
                                                                 <div class="checkbox me-0 align-self-center">
                                                                     <div class="custom-control custom-checkbox ">
                                                                         <input type="checkbox" class="form-check-input" id="check8" required="">
                                                                         <label class="custom-control-label" for="check8"></label>
                                                                     </div>
                                                                 </div>
-                                                            </td>
+                                                            </td> -->
+                                                            <td>1</td>
                                                             <td>1234567890</td>
                                                             <td class="whitesp-no p-0">
                                                                 <div class="py-sm-3 py-1">
@@ -127,14 +129,15 @@
                                                             </td>
                                                         </tr>
                                                         <tr>
-                                                            <td>
+                                                            <!-- <td>
                                                                 <div class="checkbox me-0 align-self-center">
                                                                     <div class="custom-control custom-checkbox ">
                                                                         <input type="checkbox" class="form-check-input" id="check8" required="">
                                                                         <label class="custom-control-label" for="check8"></label>
                                                                     </div>
                                                                 </div>
-                                                            </td>
+                                                            </td> -->
+                                                            <td>2</td>
                                                             <td>1234567890</td>
                                                             <td class="whitesp-no p-0">
                                                                 <div class="py-sm-3 py-1">
@@ -175,14 +178,15 @@
                                                         </tr>
 
                                                         <tr>
-                                                            <td>
+                                                            <!-- <td>
                                                                 <div class="checkbox me-0 align-self-center">
                                                                     <div class="custom-control custom-checkbox ">
                                                                         <input type="checkbox" class="form-check-input" id="check8" required="">
                                                                         <label class="custom-control-label" for="check8"></label>
                                                                     </div>
                                                                 </div>
-                                                            </td>
+                                                            </td> -->
+                                                            <td>3</td>
                                                             <td>1234567890</td>
                                                             <td class="whitesp-no p-0">
                                                                 <div class="py-sm-3 py-1">
@@ -250,7 +254,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">New Tax Payer</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">New Business Owner</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -331,35 +335,35 @@
         Scripts
     ***********************************-->
   <!-- Required vendors -->
-  <script src="../vendor/global/global.min.js"></script>
-  <script src="../vendor/chart.js/Chart.bundle.min.js"></script>
-  <script src="../vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+  <script src="../assets/vendor/global/global.min.js"></script>
+  <script src="../assets/vendor/chart.js/Chart.bundle.min.js"></script>
+  <script src="../assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
   <!-- Apex Chart -->
-  <script src="../vendor/apexchart/apexchart.js"></script>
+  <script src="../assets/vendor/apexchart/apexchart.js"></script>
   <!-- Chart piety plugin files -->
-  <script src="../vendor/peity/jquery.peity.min.js"></script>
-  <script src="../vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+  <script src="../assets/vendor/peity/jquery.peity.min.js"></script>
+  <script src="../assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
   <!--swiper-slider-->
-  <script src="../vendor/swiper/js/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/swiper/js/swiper-bundle.min.js"></script>
 
   <!-- Date-picker -->
-  <script src="../vendor/bootstrap-datetimepicker/js/moment.js"></script>
-  <script src="../vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/moment.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
   <!-- Dashboard 1 -->
-  <script src="../js/dashboard/dashboard-1.js"></script>
-  <script src="../vendor/wow-master/dist/wow.min.js"></script>
-  <script src="../vendor/bootstrap-datetimepicker/js/moment.js"></script>
-  <script src="../vendor/bootstrap-select-country/js/bootstrap-select-country.min.js"></script>
+  <script src="../assets/js/dashboard/dashboard-1.js"></script>
+  <script src="../assets/vendor/wow-master/dist/wow.min.js"></script>
+  <script src="../assets/vendor/bootstrap-datetimepicker/js/moment.js"></script>
+  <script src="../assets/vendor/bootstrap-select-country/js/bootstrap-select-country.min.js"></script>
 
-  <script src="../js/deznav-2-init.js"></script>
-  <script src="../js/custom.min.js"></script>
-  <script src="../js/demo-2.js"></script>
+  <script src="../assets/js/deznav-2-init.js"></script>
+  <script src="../assets/js/custom.min.js"></script>
+  <script src="../assets/js/demo-2.js"></script>
   <!-- <script src="js/styleSwitcher.js"></script> -->
 
-  <script src="../js/agent-nav.js"></script>
+  <script src="../assets/js/agent-nav.js"></script>
   <script>
-    displayHeaderTitile('Tax Payers') 
+    displayHeaderTitile('Business Owner') 
   </script>
 
 </body>
